# uan

./: .gitignore  .productVersionScript  .version  Dockerfile  Dockerfile.config-framework  Dockerfile.image-recipe  Dockerfile_image-recipe.dockerignore  Jenkinsfile  Jenkinsfile.config-framework  Jenkinsfile.config_framework  Jenkinsfile.github  Jenkinsfile.image-recipe  Jenkinsfile.sles15ncn-craytest  Jenkinsfile.systemd-presets  Jenkinsfile.uan-image-recipes  Makefile  README.md  cray-uan-systemd-presets.spec  create_init_ims_manifest.py  runBuildPrep-config-framework.sh  runBuildPrep-config_framework.sh  runBuildPrep-image-recipe.sh  runBuildPrep.sh  runKiwiBuild.sh  uan-crayctldeploy-tests.spec  uan-crayctldeploy.spec  uan-craytests.spec  uan-image-recipes-crayctldeploy.spec  update_tags.conf  update_tags.sh  vars.sh  zypper-csm.sh
ansible/: debug.yml  hosts  k3s.yml  rebuild-initrd.yml  set_nologin.yml  site.yml  unset_nologin.yml
ansible/customer_runbooks/: uan.yml  uan_config.yml
ansible/filter_plugins/: duplicates.py
ansible/host_vars/: README.md
ansible/vars/: uan_helm.yml  uan_k3s.yml  uan_packages.yml  uan_repos.yml  uan_sshd.yml  uan_versions.yml
kubernetes/: README.md
kubernetes/cray-uan-install/: Chart.yaml  README.md  requirements.yaml  values.yaml
python/uaictl/: LICENSE  README.md  pyproject.toml
python/uaictl/uaictl/: run_podman.py  uaictl.py
systemd-presets-premium/src/: 89-cray-uan-default.preset
tests/: csm_read_configmap.py  csm_read_secret.py  test-runner.sh  uan-aee-test-helper.sh
tests/uan-resources/: uan-common-lib.sh
(+119 files in other folders)
