[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uaictl"
version = "0.0.1"
authors = [
  { name="HPE", email="jeffrey.keopp@hpe.com" },
]
description = "An administrative CLI for managing User Access Instances (UAIs)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
uaictl = "uaictl.uaictl:main"

[project.urls]
Homepage = "https://github.com/Cray-HPE/uan"
Issues = "https://github.com/Cray-HPE/uan/issues"
